# spinningup

./: .gitignore  pyproject.toml
spinup/: __init__.py
spinup/algos/tf2/ppo/: core.py  ppo.py
spinup/examples/tf2/pg_math/: 1_simple_pg.py  2_rtg_pg.py
spinup/exercises/tf1/problem_set_1/: exercise1_2.py
spinup/exercises/tf2/problem_set_1/: exercise1_1.py
